# ViPERDSP

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md
include/: ViPERParams.h  log.h
viper/: ViPER.cpp  ViPER.h  constants.h
viper/effects/: AnalogX.cpp  AnalogX.h  ColorfulMusic.cpp  ColorfulMusic.h  Convolver.cpp  Convolver.h  Cure.cpp  Cure.h  DiffSurround.cpp  DiffSurround.h  DynamicEQ.cpp  DynamicEQ.h  DynamicSystem.cpp  DynamicSystem.h  FETCompressor.cpp  FETCompressor.h  IIRFilter.cpp  IIRFilter.h  LUFSTargeting.cpp  LUFSTargeting.h  MultibandCompressor.cpp  MultibandCompressor.h  PlaybackGain.cpp  PlaybackGain.h  PsychoacousticBass.cpp  PsychoacousticBass.h  Reverberation.cpp  Reverberation.h  SoftwareLimiter.cpp  SoftwareLimiter.h  SpeakerCorrection.cpp  SpeakerCorrection.h  SpectrumExtend.cpp  SpectrumExtend.h  StereoImager.cpp  StereoImager.h  TubeSimulator.cpp  TubeSimulator.h  VHE.cpp  VHE.h  (+13 more)
viper/utils/: AdaptiveBuffer.cpp  AdaptiveBuffer.h  Biquad.cpp  Biquad.h  CAllpassFilter.cpp  CAllpassFilter.h  CCombFilter.cpp  CCombFilter.h  CRevModel.cpp  CRevModel.h  Crc32.h  Crossfeed.cpp  Crossfeed.h  DepthSurround.cpp  DepthSurround.h  DynamicBass.cpp  DynamicBass.h  FIR.cpp  FIR.h  Harmonic.cpp  Harmonic.h  HiFi.cpp  HiFi.h  HighShelf.cpp  HighShelf.h  IIR_1st.cpp  IIR_1st.h  IIR_NOrder_BW_BP.cpp  IIR_NOrder_BW_BP.h  IIR_NOrder_BW_LH.cpp  IIR_NOrder_BW_LH.h  MinPhaseIIRCoeffs.cpp  MinPhaseIIRCoeffs.h  MultiBiquad.cpp  MultiBiquad.h  NoiseSharpening.cpp  NoiseSharpening.h  PConvSingle.cpp  PConvSingle.h  PassFilter.cpp  (+16 more)
